* Properly require date & allow for symlink (Andre Arko) - 10/31/2008
* Initial Import (JK) - 10/30/2008