@@ -1,2 +1,10 @@
-* Properly require date & allow for symlink (Andre Arko) - 10/31/2008
-* Initial Import (JK) - 10/30/2008
+10/31/2008
+----------
+
+* Display the estimate on the generated story card (JK)
+* Properly require date & allow for symlink (Andre Arko)
+
+10/30/2008
+----------
+
+* Initial Import (JK)
